--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-theme:minima
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Title of the document</title>
+</head>
+<body>
+
+<h1>Alireza Karimi</h1>
+<p>Materials Engineer</p>
+
+</body>
+</html>
